@@ -1,3 +1,8 @@
+2010-02-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thbrk/brk-maximal.c (brk_get_dict): Do not try to open dictionary
+	again if once tried. Multiple failing trials degraded performance.
+
 2010-02-25  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* include/thai/*.h, src/*.c, src/*/*.c: Add my e-mail address to
